# Agent-OS

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  ALPHA_RELEASE_NOTES.md  API.md  AUDIT_REPORT.md  Agent OS - Technical Addendum & Anticipated Critiques  Agent OS Specification.md  Architecture.md  Bring-Home-Ceremony-Bootstrapping-Flow.md  CHANGELOG.md  CLEANUP_PLAN.md  CODEBASE_EVALUATION_REPORT.md  CONSTITUTION.md  CONTRIBUTING.md  Code_of_Conduct.md  DEPENDENCY-AUDIT.md  Dockerfile  ENCRYPTION_SECURITY_REVIEW.md  EVALUATION_REPORT.md  IMPLEMENTATION_GUIDE.md  Initial Reference Architecture.md  MAINTENANCE.md  PLAN.md  PLAN_AGENTIC_AUDIT.md  PLAN_VIBE_CHECK_REMEDIATION.md  Paranoia Addendum.md  Policy Brief.md  README.md  REMEDIATION_PLAN.md  REVIEW_FINDINGS.md  ROADMAP.md  Rule Set for Agent Smith.md  Rule Set for Agent Whisper.md  SECURITY.md  SECURITY_AUDIT_AGENTIC.md  SECURITY_AUDIT_VIBE_CHECK.md  SECURITY_REVIEW_MOLTBOOK_OPENCLAW.md  START_HERE.md  (+22 more)
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  ci.yml  release.yml  security.yml
agents/: Custom-Personalities.md  GYM-Trainer.md  Librarian.md  MENTOR.md  Mirror-Mirror.md  agent-smith-ruleset.md
agents/OBSERVER/: OBSERVER.md  OBSERVER.py
agents/executive/: Aurora.md  Orion.md  constitution.md  prompt.md
agents/guardian/: config.yaml  constitution.md  prompt.md
agents/muse/: config.yaml  constitution.md  prompt.md
agents/planner/: config.yaml  constitution.md  prompt.md
agents/quill/: config.yaml  constitution.md  prompt.md
agents/researcher/: constitution.md  prompt.md
agents/sage/: config.yaml  constitution.md  prompt.md
agents/seshat/: config.yaml  constitution.md  prompt.md
agents/template/: Rule-Book.md  Rule-Code-Execution.md  Rule-Disk-Space.md  Rule-No-Overwrite.md  Rule-Signature.md  config.yaml  constitution.md  construction.md  prompt.md
benchmarks/: README.md  bench_agents.py  bench_core.py  bench_kernel.py  bench_memory.py  conftest.py
configs/: boundary-siem.yaml.example
contrib/: AGENT_TEMPLATE.md  Contributing.md  ISSUES.md  README.md
deploy/: prometheus.yml
docs/: Conversational-Kernel.md  FAQ.md  LANDING.md  LF1M.md  NLOS-Layers.md  Not-an-OS.md  PRESS_RELEASE.md  Personality-Prism.md  Product-Story.md  README.md  RUNNING_AND_COMPILING.md  Spec-to-Repo-Mapping.md  Synthetic-Cognitive-Architecture.md  Synthetic-Mind-Stack.md  The_Document_Revolution.md  constitutional-format-spec.md  deployment.md  glossary.md  lni-manifesto.md  migrations.md  repository-structure.md  the-first-24-hours.md
docs/governance/: agent-os-security-policy-making-guide.md  license-strategy.md  security-policy-guide.md  security.md
docs/integration/: advanced-memory-integration.md  boundary-tools.md
docs/technical/: Self_Healing_Workflow.md  Specification.md  TECHNICAL_ADDENDUM.md  advanced-memory-api.md  advanced-memory.md  architecture.md  red-team.md  whitepaper.md
examples/: README.md  basic-homestead-setup.md  constitution-examples.md  multi-agent-task.md
scripts/: check_requirements.py
src/: README.md  __init__.py
src/agents/: __init__.py  config.py  constitution_loader.py  enforcement.py  identity.py  interface.py  isolation.py  llama_cpp.py  loader.py  ollama.py
src/agents/muse/: __init__.py  agent.py  creative.py
src/agents/quill/: __init__.py  (+2 more)
src/boundary/: __init__.py  client.py
src/ceremony/: __init__.py  cli.py  orchestrator.py  phases.py  state.py
src/contracts/: __init__.py  abstraction.py  client.py  consent.py  domains.py  enforcement.py  store.py  validator.py
src/core/: __init__.py  constitution.py  enforcement.py  exceptions.py  input_classifier.py  input_sanitizer.py  models.py  parser.py  validator.py
src/federation/: __init__.py  crypto.py  identity.py  node.py  permissions.py  protocol.py
src/installer/: __init__.py  base.py  cli.py  config.py  docker.py  linux.py  macos.py  platform.py  windows.py
src/kernel/: __init__.py  context.py  ebpf.py  engine.py  fuse.py  interpreter.py  monitor.py  policy.py  rules.py
src/ledger/: __init__.py  client.py  hooks.py  models.py
src/memory/: __init__.py  auditor.py  consent.py  deletion.py  exceptions.py  genesis.py  index.py  keys.py  pq_keys.py  profiles.py  storage.py  vault.py
src/messaging/: __init__.py  bus.py  coordination.py  exceptions.py  models.py  redis_bus.py
src/migrations/: __init__.py  backup.py  base.py  cli.py  runner.py
src/mobile/: __init__.py  api.py  auth.py  client.py  notifications.py  platform.py  storage.py  vpn.py
src/multimodal/: __init__.py  agent.py  audio.py  video.py  vision.py
src/observability/: __init__.py  health.py  metrics.py  middleware.py  tracing.py
src/sdk/: __init__.py  builder.py  decorators.py  lifecycle.py
src/security/: __init__.py  secret_scanner.py
src/tools/: __init__.py  client.py  exceptions.py  executor.py  interface.py  manifest.py  permissions.py  registry.py  subprocess_runner.py  validation.py
src/utils/: __init__.py  encryption.py  paths.py
src/voice/: __init__.py  assistant.py  audio.py  stt.py  tts.py  wakeword.py
src/web/: __init__.py  app.py  auth.py  auth_helpers.py  config.py  conversation_store.py  dependencies.py  dreaming.py  intent_log.py  middleware.py  models.py  ratelimit.py
tests/: SKIPPED_TESTS.md  __init__.py  conftest.py  e2e_simulation.py  test_advanced_memory.py  test_agent_config.py  test_agent_interface.py  test_agent_loader.py  test_attack_detection.py  test_boundary.py  test_boundary_integration.py  test_bus_coverage.py  test_ceremony.py  test_constitution_core.py  test_constitution_loader.py  test_contracts.py  test_enforcement.py  test_federation.py  test_hybrid_certs.py  test_installer.py  test_integration.py  test_interface_coverage.py  test_kernel.py  test_memory_vault.py  test_messaging_bus.py  test_messaging_models.py  test_mobile.py  test_models.py  test_multimodal.py  test_muse.py  test_observability.py  test_orchestration.py  test_parser.py  test_post_quantum.py  test_pq_keys.py  test_pq_production.py  test_quill.py  test_sage.py  test_sdk.py  test_seshat.py  (+11 more)
(+98 files in other folders)
